styles.css
/* Add Global styles here */



@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap');

body {
  padding: 0px;
  font-family: 'Google Sans', Times, serif;
  margin: 0px;
}


h2, h1, p {
  padding: 10px;
}

h1, h2, h3, h4 {
  font-family: "Amarante";
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 20px;
}

h4, h5 {
  margin: 10px;
}
  
h5 {
  font-style: italic;
  font-weight: 100;
}

.side-by-side {
  display: flex;
}

.content img {
  width: 80%;
  margin-left: 10%;
}

.third {
  width: calc(33.33%);
  height: 800px;
  object-fit: cover;
}

.wide {
  display: flex;
  justify-content: space-between;
}

.wide-pic {
  width: 79.5vw;
  object-fit: cover;
}

.header {
  display: flex;
  justify-content: center; /* Centers horizontally */
  align-items: center;
}

.header-dark {
  display: flex;
  justify-content: center; /* Centers horizontally */
  align-items: center;
  background-color: rgb(2, 2, 1);
  color: white;
}

#nav-bar ul {
  display: flex;
  /* flex-direction: row; is the default and optional */
  list-style-type: none; /* Optional: removes bullet points */
  padding: 0; /* Optional: removes default padding */
  margin: 0px;
  font-size: 20px;

}

#nav-bar {
    background-color: black;
    width: 100%;
    height: 45px;
    position: sticky;
    top: 0;
    z-index: 100;
    
}

#nav-bar .is-stuck {
  filter: drop-shadow(0px 10px 40px rgb(0, 0, 0));
}

#nav-bar li {
    font-family: 'Arial Narrow', Arial, sans-serif;
    background-color: black;
    color: white;
    padding: 10px;

}

#nav-bar a {
    text-decoration: none;
}

#nav-bar li:hover {
  background-color: rgb(49, 49, 49);
}

#nav-bar a {
  color: white;
}

